package edu.fiuba.algo3.modelo;

public interface Movedor {

    void mover(Enemigo enemigo);

}
