package edu.fiuba.algo3.modelo;

public class VolarEnL implements Movedor {

    public void mover(Enemigo enemigo) {

    }

}
