package edu.fiuba.algo3.modelo;

public class VolarRecto implements Movedor {

    public void mover(Enemigo enemigo) {

    }

}
